--- a/index-multi.html
+++ b/index-multi.html
@@ -57,9 +57,12 @@
         }
         _.forEach(leftArr, function (value, key) {
             const e = document.createElement('iframe');
+            const p = document.createElement('p');
+            p.textContent=value+' \n vs \n '+rightArr[key]
             e.setAttribute('src', 'index.html?left=' + value + '&right=' + rightArr[key]);
             e.setAttribute('width', '100%')
             e.setAttribute('height', '300')
+            document.getElementById('report').appendChild(p)
             document.getElementById('report').appendChild(e)
         })
     }
