--- a/index-multi.html
+++ b/index-multi.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <meta charset="utf-8"/>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"
             integrity="sha256-qXBd/EfAdjOA2FGrGAG+b3YBn2tn5A6bhz+LSgYD96k=" crossorigin="anonymous"></script>
 </head>
@@ -52,14 +54,14 @@ https://api-testing.vtvtravel.vn/old/news/noteBook
 https://api-testing.vtvtravel.vn/old/videos/categories
 https://api-testing.vtvtravel.vn/old/videos/highLight
 https://api-testing.vtvtravel.vn/old/videos?categories[]=5f7d8fbf3d2b4610008b47fb
-https://api-testing.vtvtravel.vn/old/videos/byTag?tag=videos
+https://api-testing.vtvtravel.vn/old/videos/byTag?tag=hà%20nội
 https://api-testing.vtvtravel.vn/old/galleries
 https://api-testing.vtvtravel.vn/old/galleries/listById?gallery_id=5f3cd4994198d0202c8b4567
 https://api-testing.vtvtravel.vn/old/regions/select
 https://api-testing.vtvtravel.vn/old/V3/region/Info?region_id=5555bee2c4a1608e6e9a1610
 https://api-testing.vtvtravel.vn/old/regions/location?lat=21.54646&long=105.654546
 https://api-testing.vtvtravel.vn/old/region/5555bee2c4a1608e6e9a1610
-https://api-testing.vtvtravel.vn/old/search/searchByVenue?content_type=places
+https://api-testing.vtvtravel.vn/old/search/searchByVenue?content_type=places&keyword=hanoi
 https://api-testing.vtvtravel.vn/old/filterByCode
 https://api-testing.vtvtravel.vn/old/sort
 https://api-testing.vtvtravel.vn/old/V2/news/60b73e8e2b042c21944ac052
@@ -110,14 +112,14 @@ https://api-testing.vtvtravel.vn/news/noteBook
 https://api-testing.vtvtravel.vn/videos/categories
 https://api-testing.vtvtravel.vn/videos/highLight
 https://api-testing.vtvtravel.vn/videos?categories[]=5f7d8fbf3d2b4610008b47fb
-https://api-testing.vtvtravel.vn/videos/byTag?tag=videos
+https://api-testing.vtvtravel.vn/videos/byTag?tag=hà%20nội
 https://api-testing.vtvtravel.vn/galleries
 https://api-testing.vtvtravel.vn/galleries/listById?gallery_id=5f3cd4994198d0202c8b4567
 https://api-testing.vtvtravel.vn/regions/select
 https://api-testing.vtvtravel.vn/V3/region/Info?region_id=5555bee2c4a1608e6e9a1610
 https://api-testing.vtvtravel.vn/regions/location?lat=21.54646&long=105.654546
 https://api-testing.vtvtravel.vn/region/5555bee2c4a1608e6e9a1610
-https://api-testing.vtvtravel.vn/search/searchByVenue?content_type=places
+https://api-testing.vtvtravel.vn/search/searchByVenue?content_type=places&keyword=hanoi
 https://api-testing.vtvtravel.vn/filterByCode
 https://api-testing.vtvtravel.vn/sort
 https://api-testing.vtvtravel.vn/V2/news/60b73e8e2b042c21944ac052
